[gd_scene load_steps=7 format=3 uid="uid://b2roa2qw1r57p"]

[ext_resource type="Script" path="res://addons/foliage_painter/ui/palette.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c7312lyi42l7o" path="res://addons/foliage_painter/ui/toolItem.tscn" id="2_fnbg1"]
[ext_resource type="Texture2D" uid="uid://xt5whyyef3ag" path="res://addons/foliage_painter/icons/paint32.png" id="3_30bq8"]
[ext_resource type="ButtonGroup" uid="uid://cy1k0gkfxtp34" path="res://addons/foliage_painter/ui/btn_group/tool_group.tres" id="3_yna7w"]
[ext_resource type="Texture2D" uid="uid://dlja4edv6dr58" path="res://addons/foliage_painter/icons/foliage32.png" id="4_q04a5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_626v5"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="Palette" type="Control"]
minimum_size = Vector2(327, 0)
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1612.0
script = ExtResource( "1" )
metadata/_edit_use_custom_anchors = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/separation = 7

[node name="ToolBG" type="ColorRect" parent="VBoxContainer"]
minimum_size = Vector2(0, 66)
offset_right = 327.0
offset_bottom = 66.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="ToolContainer" type="MarginContainer" parent="VBoxContainer/ToolBG"]
offset_right = 148.0
offset_bottom = 46.0
theme_override_constants/margin_top = 7
theme_override_constants/margin_left = 11
metadata/_edit_layout_mode = 1

[node name="toolList" type="GridContainer" parent="VBoxContainer/ToolBG/ToolContainer"]
minimum_size = Vector2(0, 32)
offset_left = 11.0
offset_top = 7.0
offset_right = 159.0
offset_bottom = 53.0
theme_override_constants/h_separation = 14
columns = 6

[node name="Paint" parent="VBoxContainer/ToolBG/ToolContainer/toolList" instance=ExtResource( "2_fnbg1" )]
offset_right = 40.0
button_group = ExtResource( "3_yna7w" )
icon = ExtResource( "3_30bq8" )

[node name="nameLabel" parent="VBoxContainer/ToolBG/ToolContainer/toolList/Paint" index="0"]
text = "Paint"

[node name="Single" parent="VBoxContainer/ToolBG/ToolContainer/toolList" instance=ExtResource( "2_fnbg1" )]
offset_left = 54.0
offset_right = 94.0
button_pressed = true
button_group = ExtResource( "3_yna7w" )
icon = ExtResource( "4_q04a5" )

[node name="nameLabel" parent="VBoxContainer/ToolBG/ToolContainer/toolList/Single" index="0"]
text = "Single"

[node name="Erase" parent="VBoxContainer/ToolBG/ToolContainer/toolList" instance=ExtResource( "2_fnbg1" )]
offset_left = 108.0
offset_right = 148.0
button_group = ExtResource( "3_yna7w" )

[node name="ToolDetail" type="VBoxContainer" parent="VBoxContainer"]
offset_top = 73.0
offset_right = 327.0
offset_bottom = 148.0

[node name="ToolName" type="Label" parent="VBoxContainer/ToolDetail"]
offset_right = 327.0
offset_bottom = 26.0
text = "Single"

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/ToolDetail"]
minimum_size = Vector2(0, 3)
offset_top = 30.0
offset_right = 327.0
offset_bottom = 33.0
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ToolDetail"]
offset_top = 37.0
offset_right = 327.0
offset_bottom = 68.0

[node name="Label" type="Label" parent="VBoxContainer/ToolDetail/HBoxContainer"]
minimum_size = Vector2(100, 0)
offset_top = 2.0
offset_right = 100.0
offset_bottom = 28.0
text = "Brush Size"

[node name="BrushSizeSpin" type="SpinBox" parent="VBoxContainer/ToolDetail/HBoxContainer"]
offset_left = 104.0
offset_right = 187.0
offset_bottom = 31.0
min_value = 1.0
max_value = 8192.0
value = 20.0
editable = false

[node name="ColorRect2" type="ColorRect" parent="VBoxContainer/ToolDetail"]
minimum_size = Vector2(0, 3)
offset_top = 72.0
offset_right = 327.0
offset_bottom = 75.0
color = Color(0.152941, 0.152941, 0.152941, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 155.0
offset_right = 153.0
offset_bottom = 186.0
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/HBoxContainer"]
offset_bottom = 31.0

[node name="AddButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 15.0
offset_right = 67.0
offset_bottom = 31.0
text = "Add..."

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 82.0
offset_right = 153.0
offset_bottom = 31.0
text = "Remove"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
offset_top = 193.0
offset_right = 327.0
offset_bottom = 1042.0
size_flags_vertical = 3
theme_override_styles/bg = SubResource( "StyleBoxFlat_626v5" )

[node name="ElementsList" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
theme_override_constants/v_separation = 11
theme_override_constants/h_separation = 11
columns = 4

[node name="PropertyPanel" type="VBoxContainer" parent="VBoxContainer"]
visible = false
offset_top = 821.0
offset_right = 327.0
offset_bottom = 1042.0

[node name="NameLabel" type="Label" parent="VBoxContainer/PropertyPanel"]
offset_right = 327.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 24
text = "box"

[node name="Split" type="ColorRect" parent="VBoxContainer/PropertyPanel"]
minimum_size = Vector2(0, 5)
offset_top = 41.0
offset_right = 327.0
offset_bottom = 46.0
color = Color(0.12549, 0.12549, 0.12549, 1)

[node name="DensityBox" type="HBoxContainer" parent="VBoxContainer/PropertyPanel"]
offset_top = 50.0
offset_right = 327.0
offset_bottom = 81.0

[node name="Label2" type="Label" parent="VBoxContainer/PropertyPanel/DensityBox"]
offset_top = 2.0
offset_right = 59.0
offset_bottom = 28.0
hint_tooltip = "1000 x 1000"
mouse_filter = 1
text = "Density"

[node name="densitySpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/DensityBox"]
offset_left = 63.0
offset_right = 146.0
offset_bottom = 31.0
max_value = 1000.0
step = 0.01

[node name="RadiusBox" type="HBoxContainer" parent="VBoxContainer/PropertyPanel"]
offset_top = 85.0
offset_right = 327.0
offset_bottom = 116.0

[node name="Label2" type="Label" parent="VBoxContainer/PropertyPanel/RadiusBox"]
offset_top = 2.0
offset_right = 61.0
offset_bottom = 28.0
text = "Redius  "

[node name="radiusSpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/RadiusBox"]
offset_left = 65.0
offset_right = 148.0
offset_bottom = 31.0
max_value = 1000.0
step = 0.01

[node name="YOffsetBox" type="HBoxContainer" parent="VBoxContainer/PropertyPanel"]
offset_top = 120.0
offset_right = 327.0
offset_bottom = 151.0

[node name="Label2" type="Label" parent="VBoxContainer/PropertyPanel/YOffsetBox"]
offset_top = 2.0
offset_right = 62.0
offset_bottom = 28.0
text = "Y Offset"

[node name="Label3" type="Label" parent="VBoxContainer/PropertyPanel/YOffsetBox"]
offset_left = 66.0
offset_top = 2.0
offset_right = 96.0
offset_bottom = 28.0
text = "min"

[node name="minSpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/YOffsetBox"]
offset_left = 100.0
offset_right = 183.0
offset_bottom = 31.0
min_value = -1000.0
max_value = 1000.0
step = 0.1

[node name="Label4" type="Label" parent="VBoxContainer/PropertyPanel/YOffsetBox"]
offset_left = 187.0
offset_top = 2.0
offset_right = 221.0
offset_bottom = 28.0
text = "max"

[node name="maxSpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/YOffsetBox"]
offset_left = 225.0
offset_right = 308.0
offset_bottom = 31.0
min_value = -1000.0
max_value = 1000.0
step = 0.1

[node name="ScaleBox" type="HBoxContainer" parent="VBoxContainer/PropertyPanel"]
offset_top = 155.0
offset_right = 327.0
offset_bottom = 186.0
theme_override_constants/separation = 5

[node name="des" type="Label" parent="VBoxContainer/PropertyPanel/ScaleBox"]
offset_top = 2.0
offset_right = 53.0
offset_bottom = 28.0
text = "Scale   "

[node name="Label2" type="Label" parent="VBoxContainer/PropertyPanel/ScaleBox"]
offset_left = 58.0
offset_top = 2.0
offset_right = 88.0
offset_bottom = 28.0
text = "min"

[node name="minSpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/ScaleBox"]
offset_left = 93.0
offset_right = 176.0
offset_bottom = 31.0
min_value = 0.1
max_value = 10.0
step = 0.05
value = 1.0

[node name="Label3" type="Label" parent="VBoxContainer/PropertyPanel/ScaleBox"]
offset_left = 181.0
offset_top = 2.0
offset_right = 215.0
offset_bottom = 28.0
text = "max"

[node name="MaxSpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/ScaleBox"]
offset_left = 220.0
offset_right = 303.0
offset_bottom = 31.0
min_value = 0.1
max_value = 10.0
step = 0.05
value = 1.0

[node name="RotateBox" type="HBoxContainer" parent="VBoxContainer/PropertyPanel"]
offset_top = 190.0
offset_right = 327.0
offset_bottom = 221.0
theme_override_constants/separation = 5

[node name="des" type="Label" parent="VBoxContainer/PropertyPanel/RotateBox"]
offset_top = 2.0
offset_right = 52.0
offset_bottom = 28.0
text = "Rotate"

[node name="Label2" type="Label" parent="VBoxContainer/PropertyPanel/RotateBox"]
offset_left = 57.0
offset_top = 2.0
offset_right = 87.0
offset_bottom = 28.0
text = "min"

[node name="minSpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/RotateBox"]
offset_left = 92.0
offset_right = 175.0
offset_bottom = 31.0
min_value = -180.0
max_value = 180.0
step = 0.05

[node name="Label3" type="Label" parent="VBoxContainer/PropertyPanel/RotateBox"]
offset_left = 180.0
offset_top = 2.0
offset_right = 214.0
offset_bottom = 28.0
text = "max"

[node name="MaxSpin" type="SpinBox" parent="VBoxContainer/PropertyPanel/RotateBox"]
offset_left = 219.0
offset_right = 302.0
offset_bottom = 31.0
min_value = -180.0
max_value = 180.0
step = 0.05

[node name="MarginContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 1049.0
offset_right = 327.0
offset_bottom = 1080.0

[node name="MarginLabel" type="Label" parent="VBoxContainer/MarginContainer"]
offset_top = 2.0
offset_right = 115.0
offset_bottom = 28.0
text = "Object margin:"

[node name="MarginSpinBox" type="SpinBox" parent="VBoxContainer/MarginContainer"]
offset_left = 119.0
offset_right = 202.0
offset_bottom = 31.0
max_value = 10.0
step = 0.01
allow_greater = true

[connection signal="toggled" from="VBoxContainer/ToolBG/ToolContainer/toolList/Paint" to="." method="_on_tool_toggled" binds= ["Paint"]]
[connection signal="toggled" from="VBoxContainer/ToolBG/ToolContainer/toolList/Single" to="." method="_on_tool_toggled" binds= ["Single"]]
[connection signal="toggled" from="VBoxContainer/ToolBG/ToolContainer/toolList/Erase" to="." method="_on_tool_toggled" binds= ["Erase"]]
[connection signal="value_changed" from="VBoxContainer/ToolDetail/HBoxContainer/BrushSizeSpin" to="." method="_on_brush_size_spin_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/DensityBox/densitySpin" to="." method="_on_property_changed" binds= ["density"]]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/RadiusBox/radiusSpin" to="." method="_on_property_changed" binds= ["radius"]]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/YOffsetBox/minSpin" to="." method="_on_property_changed" binds= ["yOffsetMin"]]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/YOffsetBox/maxSpin" to="." method="_on_property_changed" binds= ["yOffsetMax"]]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/ScaleBox/minSpin" to="." method="_on_property_changed" binds= ["scaleMin"]]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/ScaleBox/MaxSpin" to="." method="_on_property_changed" binds= ["scaleMax"]]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/RotateBox/minSpin" to="." method="_on_property_changed" binds= ["rotateMin"]]
[connection signal="value_changed" from="VBoxContainer/PropertyPanel/RotateBox/MaxSpin" to="." method="_on_property_changed" binds= ["rotateMax"]]

[editable path="VBoxContainer/ToolBG/ToolContainer/toolList/Paint"]
[editable path="VBoxContainer/ToolBG/ToolContainer/toolList/Single"]
[editable path="VBoxContainer/ToolBG/ToolContainer/toolList/Erase"]
